--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -10,8 +10,8 @@
         <section class="sectionAbout clearfix">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 col-sm-12">
-                        <div class="serviceBox">
+                    <div class="col-md-4 col-sm-12 info">
+                        <div class="serviceBox icon-cont">
                             <div class="service-icon">
                                 <div class="circle"><i class="fas icon fa-plane-departure fa-3x"></i></div>
                             </div>
@@ -21,8 +21,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-12">
-                        <div class="serviceBox">
+                    <div class="col-md-4 col-sm-12 info">
+                        <div class="serviceBox icon-cont">
                             <div class="service-icon">
                                 <div class="circle"><i class="fas icon fa-bed fa-3x"></i></div>
                             </div>
@@ -32,8 +32,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-12">
-                        <div class="serviceBox">
+                    <div class="col-md-4 col-sm-12 info">
+                        <div class="serviceBox icon-cont">
                             <div class="service-icon">
                                 <div class="circle"><i class="fas icon fa-tasks fa-3x"></i></div>
                             </div>
